--- a/Assignment6.Rmd
+++ b/Assignment6.Rmd
@@ -15,31 +15,34 @@ assignment (numeric) - A student's average grade for the course assignments
 
 #Packages
 ```{r}
-library(rpart)
+install.packages("rpart")
+library('rpart')
 ```
 
 #Data
 ```{r}
 #Upload the data sets MOOC1.csv and MOOC2.csv
-M1 <- 
+M1 <- read.csv('MOOC1.csv')
 
-M2 <- 
+M2 <- read.csv('MOOC2.csv')
 
 ```
+
+#c.tree <- rpart(certified ~ forum.posts + grade + assignment, method="class", data=M1, control=rpart.control(minsplit=70,minbucket=23, cp=0))
 
 #Decision tree
 ```{r}
 #Using the rpart package generate a classification tree predicting certified from the other variables in the M1 data frame.
 
-c.tree1 <- 
+c.tree <- rpart(certified ~ forum.posts + grade + assignment, method="class", data=M1, control=rpart.control(minsplit=70,minbucket=23, cp=0))
 
 #Check the results from the classifcation tree using the printcp() command
 
+printcp(c.tree)
 
+#Plot your tree 
 
-#Plot your tree
-
-
+post(c.tree, file = "tree.ps", title = "Decision Tree")
 
 ```
 
@@ -48,17 +51,20 @@ c.tree1 <-
 #If we are worried about overfitting we can remove nodes form our tree using the prune() command, setting cp to the CP value from the table that corresponds to the number of nodes we want the tree to terminate at. Let's set it to two nodes.
 
 ```{r}
-c.tree2 <- prune(c.tree1, cp = 0.047739)
+c.tree2 <- prune(c.tree, cp = 0.00081699)#.047739)
 
 #Visualize this tree and compare it to the one you generated earlier
 
-post(c.tree2, file = "tree2.ps", title = "MOOC") #This creates a pdf image of the tree
+post(c.tree2, file = "tree2.ps", title = "MOOC") #This creates a pdf image of the tree2
+
+#Now use both the original tree and the pruned tree to make predictions about the students in the second data set. Which tree has a lower error rate?
+
+# Both trees are actually both identical. This is true when I prune using either CP of 1 or 2 nodes.
+
 ```
 
-#Now use both the original tree and the pruned tree to make predictions about the the students in the second data set. Which tree has a lower error rate?
-
 ```{r}
-M2$predict1 <- predict(c.tree1, M2, type = "class")
+M2$predict1 <- predict(c.tree, M2, type = "class")
 
 M2$predict2 <- predict(c.tree2, M2, type = "class")
 
