--- a/Assignment6.Rmd
+++ b/Assignment6.Rmd
@@ -33,7 +33,7 @@ M2 <- read.csv('MOOC2.csv')
 ```{r}
 #Using the rpart package generate a classification tree predicting certified from the other variables in the M1 data frame.
 
-c.tree <- rpart(certified ~ forum.posts + grade + assignment, method="class", data=M1, control=rpart.control(minsplit=70,minbucket=23, cp=0))
+c.tree <- rpart(certified ~ forum.posts + grade + assignment, method="class", data=M1, control=rpart.control(minsplit=15, cp=.00001))
 
 #Check the results from the classifcation tree using the printcp() command
 
@@ -50,7 +50,7 @@ post(c.tree, file = "tree.ps", title = "Decision Tree")
 #If we are worried about overfitting we can remove nodes form our tree using the prune() command, setting cp to the CP value from the table that corresponds to the number of nodes we want the tree to terminate at. Let's set it to two nodes.
 
 ```{r}
-c.tree2 <- prune(c.tree, cp = 0.00081699)#.047739)
+c.tree2 <- prune(c.tree, cp = 0.00245098)
 
 #Visualize this tree and compare it to the one you generated earlier
 
@@ -58,7 +58,7 @@ post(c.tree2, file = "tree2.ps", title = "MOOC") #This creates a pdf image of th
 
 #Now use both the original tree and the pruned tree to make predictions about the students in the second data set. Which tree has a lower error rate?
 
-# Both trees are actually both identical. This is true when I prune using either CP of 1 or 2 nodes.
+# tree2 has a lowerer error rate because there are less leaves.
 
 ```
 
@@ -68,8 +68,16 @@ M2$predict1 <- predict(c.tree, M2, type = "class")
 
 M2$predict2 <- predict(c.tree2, M2, type = "class")
 
-table(M2$certified, M2$predict1)
-
-table(M2$certified, M2$predict2)
-
+t1 <- table(M2$certified, M2$predict1)
+t1
+t2 <- table(M2$certified, M2$predict2)
+t2
 ```
+
+```{r}
+
+#Calculating Accuracy for T1 and T2 
+sum(diag(t1)/sum(t1))
+sum(diag(t2)/sum(t2))
+```
+
